syntax = "proto3";

option go_package = "github.ibm.com/distributed-trust-research/scalable-committer/sigverification";

package sigverification;

import "token/token.proto";


service Verifier {
    rpc SetVerificationKey(Key) returns (Empty);
    rpc StartStream(stream RequestBatch) returns (stream ResponseBatch);
}

message Key {
    bytes serialized_bytes = 1;
}

message Empty {
}

message Request {
    uint64 block_num  = 1;
    uint64 tx_num = 2;
    token.Tx tx = 3;
}

message RequestBatch {
    repeated Request requests = 1;
}

message Response {
    uint64 block_num  = 1;
    uint64 tx_num = 2;
    string tx_id = 3;
    bool is_valid = 4;
    string error_message = 5;
}

message ResponseBatch {
    repeated Response responses = 1;
}